--- a/GNSS_QHY/GNSS_QHY.vcxproj
+++ b/GNSS_QHY/GNSS_QHY.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\gnss.h" />
+    <ClInclude Include="include\gnss_pos.h" />
     <ClInclude Include="include\readfile.h" />
   </ItemGroup>
   <ItemGroup>
